# KColoring_Project_GALe

./: CMakeLists.txt  Memory.md  benchmark.py  benchmark_simple.py  desktop.ini  results_exact.csv  results_manual.csv
graphs/: g_01_n20_p0.1_r0.txt  g_02_n20_p0.1_r1.txt  g_03_n20_p0.1_r2.txt  g_04_n20_p0.2_r0.txt  g_05_n20_p0.2_r1.txt  g_06_n20_p0.2_r2.txt  g_07_n20_p0.3_r0.txt  g_08_n20_p0.3_r1.txt  g_09_n20_p0.3_r2.txt  g_10_n30_p0.1_r0.txt  g_11_n30_p0.1_r1.txt  g_12_n30_p0.1_r2.txt  g_13_n30_p0.2_r0.txt  g_14_n30_p0.2_r1.txt  g_15_n30_p0.2_r2.txt  g_16_n30_p0.3_r0.txt  g_17_n30_p0.3_r1.txt  g_18_n30_p0.3_r2.txt  g_19_n40_p0.1_r0.txt  g_20_n40_p0.1_r1.txt  g_21_n40_p0.1_r2.txt  g_22_n40_p0.2_r0.txt  g_23_n40_p0.2_r1.txt  g_24_n40_p0.2_r2.txt  g_25_n40_p0.3_r0.txt  g_26_n40_p0.3_r1.txt  g_27_n40_p0.3_r2.txt  g_28_n50_p0.1_r0.txt  g_29_n50_p0.1_r1.txt  g_30_n50_p0.1_r2.txt  g_31_n50_p0.2_r0.txt  g_32_n50_p0.2_r1.txt  g_33_n50_p0.2_r2.txt  g_34_n50_p0.3_r0.txt  g_35_n50_p0.3_r1.txt  g_36_n50_p0.3_r2.txt
include/: DSATUR.h  Graph.h  KColorExact.h  WelshPowell.h
script/: generate_graphs.py  run_algorithm.py
src/: DSATUR.cpp  Graph.cpp  KColorExact.cpp  WelshPowell.cpp  main.cpp
